--- a/lateral-options/produtividade.html
+++ b/lateral-options/produtividade.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div id="stant-produtividade" class="container">
+    <h2 id="title-content">Veja nossas funcionalidades</h2>
     <div id="left" class="d-lg-none"></div>
     <div id="right" class="d-lg-none"></div>
     <div class="row">
