update an button link in the site

--- a/lateral-options/produtividade.html
+++ b/lateral-options/produtividade.html
@@ -8,6 +8,14 @@
 <body>
   <div id="stant-produtividade" class="container">
     <h2 id="title-content">Veja nossas funcionalidades</h2>
+    <a id="funcionalidade-link"
+    href="https://dnaformarketing.com.br/stant/agende-uma-apresentacao/"
+    class="elementor-button-link elementor-button elementor-size-md" 
+    role="button">
+      <span class="elementor-button-content-wrapper">
+        <span class="elementor-button-text">Veja mais</span>
+      </span>
+    </a>
     <div id="left" class="d-lg-none"></div>
     <div id="right" class="d-lg-none"></div>
     <div class="row">
