--- a/menu-and-alternate-content/index.html
+++ b/menu-and-alternate-content/index.html
@@ -6,6 +6,7 @@
     <title>Menus e Submenus</title>
 </head>
 <body>
+    <div id="anchors"></div>
     <div class="container menuandsub" id="menuandsub">
         <div id="left" class="d-lg-none"></div>
         <div id="right" class="d-lg-none"></div>
